--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.2",
         "react-otp-input": "^3.1.1",
+        "react-phone-input-2": "^2.15.1",
         "react-router-dom": "^7.5.1",
         "tailwind-clip-path": "^1.0.0",
         "tailwindcss": "3"
@@ -37,4 +38,3 @@
         "vite": "^6.3.1"
     }
 }
-
